[gd_scene load_steps=2 format=3 uid="uid://db2o3bnwn2mss"]

[ext_resource type="Script" path="res://scripts/ui/land_grid/aspect_info_panel.gd" id="1_k8qv1"]

[node name="AspectInfoPanel" type="Panel"]
custom_minimum_size = Vector2(300, 0)
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -300.0
grow_horizontal = 0
grow_vertical = 2
script = ExtResource("1_k8qv1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HeaderContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="lbl_title" type="Label" parent="MarginContainer/VBoxContainer/HeaderContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Land Aspects"
horizontal_alignment = 1

[node name="lbl_parcel_coords" type="Label" parent="MarginContainer/VBoxContainer/HeaderContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Parcel (0, 0)"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="AspectListContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="lbl_aspects" type="Label" parent="MarginContainer/VBoxContainer/AspectListContainer"]
layout_mode = 2
text = "Discovered Aspects:"

[node name="rtl_aspect_list" type="RichTextLabel" parent="MarginContainer/VBoxContainer/AspectListContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "This parcel has not been surveyed yet."

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="AspectDetailsContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="lbl_details" type="Label" parent="MarginContainer/VBoxContainer/AspectDetailsContainer"]
layout_mode = 2
text = "Aspect Details:"

[node name="rtl_aspect_info" type="RichTextLabel" parent="MarginContainer/VBoxContainer/AspectDetailsContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "Select an aspect to see details."

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="btn_survey" type="Button" parent="MarginContainer/VBoxContainer/ButtonContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Survey Parcel" 